Zope Changes

  This file contains change information for the current Zope release.
  Change information for previous versions of Zope can be found in the
  file HISTORY.txt.

  Zope 2.10.4 (unreleased)

    Bugs fixed
    
  Zope 2.10.3 (2007/03/25)

    Bugs fixed

      - Collector #2298: webdav.Resource.COPY and webdav.Resource.MOVE did
        not send the expected copy/move events.

      - Collector #2296: Fixed import of ZClass products, broken by removal
        of BBB support for pasting objects whose meta_type info was
        permission-free.

      - Collector #2294: Protected DOS-able ControlPanel methods with the
        same 'requestmethod' wrapper.

      - Collector #2294: Protected various security mutators with a new
        'postonly' decorator.  The decorator limits method publishing to
        POST requests only, and is a backport from Zope 2.11's requestmethod
        decorator factory.

      - Collector #2289: restored compatibility with PTProfiler
    
      - No longer opens a zodb connection every time a ProductDispatcher
        is looked up.

      - Collector #2288: @ and + should not be quoted when forming
        request URLs in BaseRequest and HTTPRequest

      - Undeprecated 'zLOG', which will remain a backward-compatibility
        shim for the Python logging module.

      - PageTemplate/ZRPythonExpr.py: expressions represented as unicode string
        caused UnicodeDecodeErrors. 

  Zope 2.10.2 (2007/01/26)

    Bugs fixed

      - Updated Zope 3 to bugfix release 3.3.1.

      - Collector #2261: Acquisition when creating objects via Webdav.

      - Collector #2269: fixed broken FTP support for ZPT

  Zope 2.10.2 beta 1 (2007/01/14)

    Bugs fixed

      - Fixed Collector #2190: Calls to
        zope.security.management.checkPermission aren't rerouted to
        Zope 2's security policy.

        NOTE: If you already have a Zope 2.10 instance running, you